fix wrap padding

--- a/src/stylus/atoms/_structure.styl
+++ b/src/stylus/atoms/_structure.styl
@@ -68,3 +68,6 @@ img
 	max-width wrap-max-width
 	width 100%
 	margin 0 auto
+
+	+below(768px)
+		padding 0 spacing(24px)
